--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -27,7 +27,24 @@ header#header img#icon {
 header#header {
 	border-bottom: 1px #606060 solid;
 	height: 150px;
-	background: url("../_imagens/glass-logo-peq.jpg");
+	background: url("../_imagens/glass-logo-peq.jpg") no-repeat 0px 80px;
+}
+
+header#header h1 {
+	font-family: Arial, sans-serif;
+	font-size: 30pt;
+	color: #606060;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.6);
+	padding: 0px;
+	margin-bottom: 0px;
+}
+
+header#header h2 {
+	font-family: Arial, sans-serif;
+	color: #888888;
+	font-size: 15pt;
+	padding: 0px;
+	margin-top: 0px;
 }
 
 /* Formatacao de imagens com legendas */
