--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,4 +1,10 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css?family=Titillium+Web');
+
+@font-face {
+	font-family: 'FontLogo';
+	src: url("../_fonts/bubblegum-sans-regular.otf");
+}
 
 body {
 	background-color: #dddddd;
@@ -31,7 +37,7 @@ header#header {
 }
 
 header#header h1 {
-	font-family: Arial, sans-serif;
+	font-family: 'FontLogo', sans-serif;
 	font-size: 30pt;
 	color: #606060;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.6);
@@ -40,7 +46,7 @@ header#header h1 {
 }
 
 header#header h2 {
-	font-family: Arial, sans-serif;
+	font-family: 'Titillium Web', sans-serif;
 	color: #888888;
 	font-size: 15pt;
 	padding: 0px;
