--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -122,3 +122,26 @@ nav#menu a:hover {
 	color: #ffffff;
 	text-decoration: underline;
 }
+
+section#body {
+	display: block;
+	width: 520px;
+	float: left;
+	border-right: 1px solid #606060;
+	padding-right: 15px;
+}
+
+aside#side {
+	display: block;
+	width: 350px;
+	float: right;
+}
+
+footer#footer {
+	clear: both;
+	border-top: 1px solid #606060;
+}
+
+footer#footer p {
+	text-align: center;
+}
