--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -131,6 +131,20 @@ section#body {
 	padding-right: 15px;
 }
 
+table#tablespec {
+	border: 1px solid #606060;
+	border-spacing: 0px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+table#tablespec td {
+	border: 1px solid #606060;
+	padding: 10px;
+	text-align: center;
+	vertical-align: bottom;
+}
+
 aside#side {
 	display: block;
 	width: 350px;
