--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -145,6 +145,32 @@ table#tablespec td {
 	vertical-align: bottom;
 }
 
+table#tablespec td.lc {
+	color: #ffffff;
+	background-color: #606060;
+	vertical-align: top
+	font-weight: bold;
+}
+
+table#tablespec td.rc {
+	background-color: #cecece;
+
+}
+
+table#tablespec caption {
+	color: #888888;
+	font-size: 13pt;
+	font-weight: bolder;
+}
+
+table#tablespec caption span {
+	display: block;
+	float: right;
+	color: #000000;
+	font-size: 8pt;
+	margin-top: 10px;
+}
+
 aside#side {
 	display: block;
 	width: 350px;
