--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -7,6 +7,7 @@
 }
 
 body {
+	font-family: Arial, sans-serif;
 	background-color: #dddddd;
 	color: rgba(0,0,0,1);
 }
@@ -22,6 +23,15 @@ div#interface {
 p {
 	text-align: justify;
 	text-indent: 50px;
+}
+
+a {
+	color: #606060;
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
 }
 
 header#header img#icon {
@@ -125,10 +135,42 @@ nav#menu a:hover {
 
 section#body {
 	display: block;
-	width: 520px;
+	width: 500px;
 	float: left;
 	border-right: 1px solid #606060;
 	padding-right: 15px;
+}
+
+article#main-notice h2 {
+	font-size: 13pt;
+	color: #606060;
+	background-color: #dddddd;
+	padding: 5px 0px 5px 10px;
+	margin: 10px 0px 10px 0px;
+}
+
+header#article-header h1 {
+	font-family: 'FontLogo', sans-serif;
+	font-size: 20pt;
+	color: #606060;
+	margin-bottom: 0px;
+	margin-top: 0px;
+}
+
+header#article-header h2 {
+	font-size: 13pt;
+	color: #cecece;
+	background-color: #ffffff;
+	margin-top: 0px;
+}
+
+header#article-header h3 {
+	font-size: 12px;
+	color: #606060;
+}
+
+.right {
+	text-align: right;
 }
 
 table#tablespec {
@@ -175,6 +217,24 @@ aside#side {
 	display: block;
 	width: 350px;
 	float: right;
+	background-color: #dddddd;
+	padding: 10px;
+	margin-top: 10px;
+	box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+}
+
+aside#side h1 {
+	font-family: 'FontLogo', sans-serif;
+	font-size: 20pt;
+	color: #606060;
+	margin-top: 0px;
+}
+
+aside#side h2 {
+	background-color: #606060;
+	font-size: 13pt;
+	color: #ffffff;
+	padding: 5px;
 }
 
 footer#footer {
