--- a/_css/fotos.css
+++ b/_css/fotos.css
@@ -10,6 +10,20 @@ ul#photo-album {
 
 ul#photo-album li span {
 	opacity: 0;
+	color: #ffffff;
+	text-shadow: 1px 1px 1px #000000;
+	background-color: rgba(0,0,0,0.3);
+	font-size: 9pt;
+	line-height: 370px;
+	padding: 5px;
+}
+
+ul#photo-album li:hover span {
+	opacity: 1;
+}
+
+ul#photo-album li:hover {
+	-webkit-transform: scale(1.5);
 }
 
 ul#photo-album li {
@@ -20,28 +34,72 @@ ul#photo-album li {
 	border: 5px solid #ffffff;
 	background-color: #ffffff;
 	box-shadow: 1px 1px 3px rgba(0,0,0,0.4);
+	-webkit-transition: all 0.3s ease-in;
 }
 
 ul#photo-album li#photo01 {
 	background: url('../_imagens/galeria-01.jpg') no-repeat;
+	background-position: 50% 50%;
+	background-size: 400px 400px;
+	background-color: #ffffff;
+}
+
+ul#photo-album li#photo01:hover {
+	background-position: 0px 0px;
+	background-size: 200px 200px;
 }
 
 ul#photo-album li#photo02 {
 	background: url('../_imagens/galeria-02.jpg') no-repeat;
+	background-position: 50% 50%;
+	background-size: 400px 400px;
+	background-color: #ffffff;
+}
+
+ul#photo-album li#photo02:hover {
+	background-position: 0px 0px;
+	background-size: 200px 200px;
 }
 
 ul#photo-album li#photo03 {
 	background: url('../_imagens/galeria-03.jpg') no-repeat;
+	background-position: 50% 50%;
+	background-size: 400px 400px;
+	background-color: #ffffff;
+}
+
+ul#photo-album li#photo03:hover {
+	background-position: 0px 0px;
+	background-size: 200px 200px;
 }
 
 ul#photo-album li#photo04 {
 	background: url('../_imagens/galeria-04.jpg') no-repeat;
+	background-position: 50% 50%;
+	background-size: 400px 400px;
+	background-color: #ffffff;
+}
+
+ul#photo-album li#photo05:hover {
+	background-position: 0px 0px;
+	background-size: 200px 200px;
 }
 
 ul#photo-album li#photo05 {
 	background: url('../_imagens/galeria-05.jpg') no-repeat;
+	background-position: 50% 50%;
+	background-size: 400px 400px;
+	background-color: #ffffff;
 }
 
 ul#photo-album li#photo06 {
 	background: url('../_imagens/galeria-06.jpg') no-repeat;
+	background-position: 50% 50%;
+	background-size: 400px 400px;
+	background-color: #ffffff;
+}
+
+ul#photo-album li#photo06:hover {
+	background-position: 0px 0px;
+	background-size: 200px 200px;
 }
